--- a/app/src/main/res/layout/activity_invoice.xml
+++ b/app/src/main/res/layout/activity_invoice.xml
@@ -31,7 +31,7 @@
                 android:layout_weight="2"
                 android:text="Transactions"
                 android:textSize="@dimen/_12sdp"
-                android:textColor="@color/black"></com.vynkpay.custom.NormalTextView>
+                android:textColor="@color/black"/>
 
 
             <LinearLayout
@@ -59,13 +59,7 @@
                 </com.vynkpay.custom.NormalTextView>
             </LinearLayout>
 
-
-
         </LinearLayout>
-
-
-
-
 
 
         <LinearLayout
@@ -79,10 +73,9 @@
 
             <androidx.appcompat.widget.SearchView
                 app:iconifiedByDefault="false"
-
                 android:id="@+id/searchView"
                 android:layout_width="0dp"
-                android:layout_weight="3"
+                android:layout_weight="4"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
                 android:queryHint="Search Here"
@@ -94,6 +87,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="end"
+                android:visibility="gone"
                 android:orientation="horizontal">
 
                 <ImageView
