--- a/app/src/main/res/layout/activity_token_trnsfr_history.xml
+++ b/app/src/main/res/layout/activity_token_trnsfr_history.xml
@@ -8,35 +8,8 @@
         android:orientation="vertical"
         tools:context=".activity.activities.TokenTrnsfrHistory">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:background="@color/colorPrimary"
-            android:padding="@dimen/_10sdp"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/backIV"
-                android:src="@drawable/ic_back_arrow"/>
-
-            <com.vynkpay.custom.NormalTextView
-                android:id="@+id/toolbarTitle"
-                android:layout_width="match_parent"
-                android:singleLine="true"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:layout_toEndOf="@+id/backIV"
-                android:gravity="center_vertical"
-                android:textSize="@dimen/_14sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_16sdp"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:textColor="@color/white" />
-
-
-        </RelativeLayout>
+        <include layout="@layout/toolbar_new"
+            android:id="@+id/toolbarLayout"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,7 +48,7 @@
                         android:textColor="@color/black"
                         android:textSize="@dimen/_10sdp"
                         android:id="@+id/txnTV"
-                        android:text="TNR ADDRESS"/>
+                        android:text="TRX ADDRESS"/>
 
                 </LinearLayout>
 
