--- a/app/src/main/res/layout/activity_webview_new.xml
+++ b/app/src/main/res/layout/activity_webview_new.xml
@@ -1,39 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:local="http://schemas.android.com/apk/res-auto"
+    xmlns:local="http://schemas.android.com/apk/res-auto">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activity.activities.WebviewActivityNew">
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <com.vynkpay.custom.NormalTextView
-                android:id="@+id/toolbarTitle"
-                android:layout_width="match_parent"
-                android:singleLine="true"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:layout_marginEnd="@dimen/_16sdp"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="vrfs"
-                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
-                android:textColor="@color/white" />
-        </RelativeLayout>
-    </androidx.appcompat.widget.Toolbar>
+
+    <include
+        android:id="@+id/toolbarLayout"
+        layout="@layout/toolbar_new" />
+
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -42,4 +21,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </LinearLayout>
+</layout>
