--- a/app/src/main/res/layout/activity_withdrawn_submited.xml
+++ b/app/src/main/res/layout/activity_withdrawn_submited.xml
@@ -60,7 +60,7 @@
                     android:layout_marginLeft="@dimen/_24sdp"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:layout_marginBottom="@dimen/_20sdp"
-                    android:text="@string/home"
+                    android:text="@string/done"
                     android:textSize="@dimen/_12sdp"
                     android:textColor="@color/white" />
 
