--- a/app/src/main/res/layout/mcash_header_layout.xml
+++ b/app/src/main/res/layout/mcash_header_layout.xml
@@ -230,6 +230,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
+                    android:visibility="gone"
                     android:layout_gravity="center_vertical"
                     android:gravity="center_vertical"
                     android:id="@+id/filterLinear">
@@ -266,6 +267,7 @@
 
                     <View
                         android:layout_width="1dp"
+                        android:visibility="gone"
                         android:layout_height="match_parent"
                         android:background="@color/black"/>
 
